Добавил стили для promo

--- a/source/index.html
+++ b/source/index.html
@@ -81,16 +81,16 @@
     <ul class="header__social">
       <li class="header__social-item">
         <a href="#" class="header__social-link">
-          <svg class="header__social-svg header__social-svg--youtube" role="img" aria-label="Мы в Youtube" width="37"
-            height="37">
+          <svg class="header__social-svg header__social-svg--youtube" role="img" aria-label="Мы в Youtube" width="27"
+            height="20">
             <use xlink:href="img/stack.svg#youtube"></use>
           </svg>
         </a>
       </li>
       <li class="header__social-item">
         <a href="#" class="header__social-link">
-          <svg class="header__social-svg header__social-svg--telegram" role="img" aria-label="Мы в telegram" width="37"
-            height="37">
+          <svg class="header__social-svg header__social-svg--telegram" role="img" aria-label="Мы в telegram" width="29"
+            height="23">
             <use xlink:href="img/stack.svg#telegram"></use>
           </svg>
         </a>
@@ -98,7 +98,7 @@
       <li class="header__social-item">
         <a href="#" class="header__social-link">
           <svg class="header__social-svg header__social-svg--instagram" role="img" aria-label="Мы в instagram"
-            width="37" height="37">
+            width="25" height="25">
             <use xlink:href="img/stack.svg#instagram"></use>
           </svg>
         </a>
@@ -106,7 +106,7 @@
       <li class="header__social-item">
         <a href="#" class="header__social-link">
           <svg class="header__social-svg header__social-svg--vkontakte" role="img" aria-label="Мы в вконтакте"
-            width="37" height="37">
+            width="26" height="15">
             <use xlink:href="img/stack.svg#vk"></use>
           </svg>
         </a>
@@ -124,24 +124,41 @@
   </header>
 
   <main>
-    <!-- <section class="promo">
+    <section class="promo">
       <h1 class="visually-hidden">Заработки</h1>
-      <p class="promo__text-number">38 469 800 ₽</p>
-      <p class="promo__text">Заработали наши инвесторы на рынке недвижимости</p>
+      <div class="promo__top-wrapper">
+        <p class="promo__text-number">38 469 800 ₽</p>
+        <p class="promo__text">Заработали наши инвесторы на рынке недвижимости</p>
+      </div>
       <p class="promo__text-week">Итоги недели 24.05.21 - 30.05.21:</p>
       <table class="promo__info">
         <tr>
-          <td>1М</td>
-          <td>56,7K</td>
-          <td>289,1М</td>
+          <td class="promo__info-text">1М</td>
+          <td class="promo__info-text">56,7K</td>
+          <td class="promo__info-text promo__info-text--size">289,1М</td>
         </tr>
         <tr>
-          <th>Выплачено инвесторам</th>
-          <th>Выплачено партнерам</th>
-          <th>Текщий рамер портфеля</th>
+          <th class="promo__info-title">Выплачено <br>инвесторам
+            <picture>
+              <source media="(min-width: 768px)" srcset="img/quaere.png">
+              <img class="promo__info-title-img" src="img/quaere-12.png" alt="знак вопоса">
+            </picture>
+          </th>
+          <th class="promo__info-title">Выплачено <br>партнерам
+            <picture>
+              <source media="(min-width: 768px)" srcset="img/quaere.png">
+              <img class="promo__info-title-img" src="img/quaere-12.png" alt="знак вопоса">
+            </picture>
+          </th>
+          <th class="promo__info-title">Текщий рамер <br>портфеля
+            <picture>
+              <source media="(min-width: 768px)" srcset="img/quaere.png">
+              <img class="promo__info-title-img promo__info-title-img--size" src="img/quaere-12.png" alt="знак вопоса">
+            </picture>
+          </th>
         </tr>
       </table>
-    </section> -->
+    </section>
     <!-- <section class="options">
       <h2 class="options__title">Варианты инвестирования</h2>
       <div class="options__trust">
