--- a/source/index.html
+++ b/source/index.html
@@ -159,50 +159,111 @@
         </tr>
       </table>
     </section>
-    <!-- <section class="options">
+    <section class="options">
       <h2 class="options__title">Варианты инвестирования</h2>
-      <div class="options__trust">
-        <h3 class="options__trust-title">Доверительное Управление (ДУ)</h3>
-        <select class="options__select-trust" name="select-trust">
-          <option value="value1" selected>Условия</option>
-          <option value="value2">Преимущества</option>
-          <option value="value3">Ограничения</option>
-          <option value="value4">Шаблон договора</option>
-        </select>
+      <ul class="options__nav">
+        <li class="options__nav-item options__nav-item--active">
+          <button class="options__nav-button">Доверительное Управление (ДУ)</button>
+        </li>
+        <li class="options__nav-item">
+          <button class="options__nav-button">Финансирование конкретной сделки</button>
+        </li>
+      </ul>
+      <div class="options__cart options__cart--trust options__cart--active">
+        <h3 class="options__cart-title">Доверительное Управление (ДУ)</h3>
+        <ul class="options__menu">
+          <li class="options__menu-item">
+            <a href="#" class="options__menu-link options__menu-link--active">Условия</a>
+          </li>
+          <li class="options__menu-item">
+            <a href="#" class="options__menu-link">Преимущества</a>
+          </li>
+          <li class="options__menu-item">
+            <a href="#" class="options__menu-link">Ограничения</a>
+          </li>
+          <li class="options__menu-item">
+            <a href="#" class="options__menu-link">Шаблон договора</a>
+          </li>
+        </ul>
         <p class="options__work">Как это работает?</p>
         <p class="options__text">Вы инвестируете деньги, мы вкладываем их в выгодные сделки</p>
         <div class="options__info">
-          <table class="options____info-table">
+          <table class="options__info-table">
             <tr>
-              <th>Доход:</th>
-              <td>12%<span>годовых</span></td>
-              <td>14%<span>годовых</span></td>
-              <td>16%<span>годовых</span></td>
-              <td>18%<span>годовых</span></td>
+              <th scope="col">Доход:</th>
+              <th scope="col">Вклад:</th>
             </tr>
             <tr>
-              <th>Вклад:</th>
-              <td>от 100 тыс до 249 тыс</td>
-              <td>от 250 тыс до 499 тыс</td>
-              <td>от 250 тыс до 499 тыс</td>
-              <td>от 1 млн</td>
+              <td class="options__info-rate">12%</td>
+              <td class="options__info-range" rowspan="2">
+                <div class="options__info-range-wrapper">
+                  <span>от </span>100 тыс<span> до </span>
+                  <p>-</p>249 тыс
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td class="options__info-term">годовых</td>
+            </tr>
+            <tr>
+              <td class="options__info-rate">14%</td>
+              <td class="options__info-range" rowspan="2">
+                <div class="options__info-range-wrapper">
+                  <span>от </span>250 тыс<span> до </span>
+                  <p>-</p>499 тыс
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td class="options__info-term">годовых</td>
+            </tr>
+            <tr>
+              <td class="options__info-rate">16%</td>
+              <td class="options__info-range" rowspan="2">
+                <div class="options__info-range-wrapper">
+                  <span>от </span>450 тыс<span> до </span>
+                  <p>-</p>1 млн
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td class="options__info-term">годовых</td>
+            </tr>
+            <tr>
+              <td class="options__info-rate">18%</td>
+              <td class="options__info-range" rowspan="2">от 1 млн</td>
+            </tr>
+            <tr>
+              <td class="options__info-term">годовых</td>
             </tr>
           </table>
-          <p class="options__info-text">Если срок менее 1 года, то доходность уменьшается на 1%</p>
+          <div class="options__info-text-wrapper">
+            <p class="options__info-text">Если срок менее 1 года, то доходность уменьшается на 1%</p>
+          </div>
         </div>
         <div class="options__wrapper-button">
           <a class="options__button" href="#">инвестировать</a>
         </div>
       </div>
-      <div class="options__specific">
-        <h3 class="options__specific-title">Финансирование конкретной сделки</h3>
-        <select class="options__select-specific" name="select-specific">
-          <option value="value1" selected>Условия</option>
-          <option value="value2">Доступные лоты</option>
-          <option value="value3">Преимущества</option>
-          <option value="value4">Ограничения</option>
-          <option value="value5">Шаблон договора</option>
-        </select>
+      <div class="options__cart options__cart--specific">
+        <h3 class="options__cart-title">Финансирование Сделки (ФС)</h3>
+        <ul class="options__menu">
+          <li class="options__menu-item">
+            <a href="#" class="options__menu-link options__menu-link--active">Условия</a>
+          </li>
+          <li class="options__menu-item">
+            <a href="#" class="Доступные лоты">Преимущества</a>
+          </li>
+          <li class="options__menu-item">
+            <a href="#" class="options__menu-link">Преимущества</a>
+          </li>
+          <li class="options__menu-item">
+            <a href="#" class="options__menu-link">Ограничения</a>
+          </li>
+          <li class="options__menu-item">
+            <a href="#" class="options__menu-link">Шаблон договора</a>
+          </li>
+        </ul>
         <p class="options__work">Как это работает?</p>
         <p class="options__text">Вид финансирования, при котором один инвестор покрывает всю сумму сделки и становится
           залогодержателем</p>
@@ -222,7 +283,7 @@
           <a class="options__button" href="#">инвестировать</a>
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- <section class="calculator">
       <h2 class="calculator__title">Калькулятор дохода в Доверительном Управлении</h2>
       <form class="calculator__form">
